# BiometricCv

./: CMakeLists.txt  README.md  build.bat
src/: AudioRecorder.cpp  AudioRecorder.hpp  CameraService.cpp  CameraService.hpp  Config.hpp  FaceProcessor.cpp  FaceProcessor.hpp  FacialValidator.cpp  FacialValidator.h  FeedbackServer.cpp  FeedbackServer.hpp  Logger.cpp  Logger.hpp  SocketServer.cpp  SocketServer.hpp  StateController.cpp  StateController.hpp  StreamServer.cpp  StreamServer.hpp  UIManager.cpp  UIManager.hpp  Utils.cpp  Utils.hpp  VideoRecorder.cpp  VideoRecorder.hpp  base64.cpp  main.cpp
src/states/: BiometricsCaptureState.cpp  BiometricsCaptureState.hpp  CaptureFailedState.cpp  CaptureFailedState.hpp  CaptureSuccessState.cpp  CaptureSuccessState.hpp  EnvironmentCheckState.cpp  EnvironmentCheckState.hpp  IAppState.hpp  MonitoringState.cpp  MonitoringState.hpp  SearchingFaceState.cpp  SearchingFaceState.hpp  ValidatingState.cpp  ValidatingState.hpp
